tests/baselines/reference/parserMemberFunctionDeclarationAmbiguities1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclarationAmbiguities1.ts (4 errors) ====
    class C {
      public() {}
      static() {}
    
      public public() {}
      ~~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
      public static() {}
      ~~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
    
      public static public() {}
      public static static() {}
      
      static public() {}
      ~~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
      static static() {}
      ~~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
    }